feat: add new tests, encapsulation rules